--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     , "description" :     "A node.js statistics server"
     , "version" :    "0.0.1"
     , "dependencies": {
-        "mongodb": "0.9.6"
+        "mongodb": "0.9.6-7"
         ,"socket.io": "0.6.18"
-        ,"node-static": "0.5.6"
+        ,"connect": "latest"
+        ,"ejs": "latest"
         ,"geoip": "0.3.4-1"
         ,"express": "2.3.11"
     }
